# cmeg_cpp

./: .gitignore  README.md  project.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/connect_zero/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/cmeg/: CMakeLists.txt  cmeg.cpp  cmeg.hpp  myproto.pb  myproto.txt  net-protocol.pb.cc  net-protocol.pb.h
src/libs/networking/: CMakeLists.txt  tcpsocket.hpp
src/libs/tracer/: CMakeLists.txt  tracer.hpp
src/libs/utils/: CMakeLists.txt  circularbuffer.hpp
src/tests/: CMakeLists.txt
